syntax = "proto3";

package internalapi.v1;

import "internalapi/v1/domain.proto";

option go_package = "git.netflux.io/rob/octoplex/internal/generated/grpc/internalapi/v1";

message Event {
  oneof event_type {
    AppStateChangedEvent app_state_changed = 1;
    DestinationStreamExitedEvent destination_stream_exited = 2;
    DestinationAddedEvent destination_added = 3;
    AddDestinationFailedEvent add_destination_failed = 4;
    DestinationUpdatedEvent destination_updated = 5;
    UpdateDestinationFailedEvent update_destination_failed = 6;
    DestinationRemovedEvent destination_removed = 7;
    RemoveDestinationFailedEvent remove_destination_failed = 8;
    DestinationStartedEvent destination_started = 9;
    StartDestinationFailedEvent start_destination_failed = 10;
    DestinationStoppedEvent destination_stopped = 11;
    StopDestinationFailedEvent stop_destination_failed = 12;
    MediaServerStartedEvent media_server_started = 13;
    OtherInstanceDetectedEvent other_instance_detected = 14;
    FatalErrorEvent fatal_error = 15;
    HandshakeCompletedEvent handshake_completed = 16;
    DestinationsListedEvent destinations_listed = 17;
    ListDestinationsFailedEvent list_destinations_failed = 18;
  }
}

message AppStateChangedEvent {
  AppState app_state = 1;
}

message DestinationStreamExitedEvent {
  bytes id = 1;
  string name = 2;
  string error = 3;
}

message DestinationsListedEvent {
  repeated Destination destinations = 1;
}

message ListDestinationsFailedEvent {
  string error = 1;
}

message DestinationAddedEvent {
  bytes id = 1;
}

message AddDestinationFailedEvent {
  string url = 1;
  string error = 2;
}

message DestinationUpdatedEvent {
  bytes id = 1;
}

message UpdateDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message DestinationRemovedEvent {
  bytes id = 1;
}

message RemoveDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message DestinationStartedEvent {
  bytes id = 1;
}

message StartDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message DestinationStoppedEvent {
  bytes id = 1;
}

message StopDestinationFailedEvent {
  bytes id = 1;
  string error = 2;
}

message MediaServerStartedEvent {}

message OtherInstanceDetectedEvent {}

message FatalErrorEvent {
  string message = 1;
}

message HandshakeCompletedEvent {}
